@@ -9,6 +9,8 @@ CHANGES
 
 - Added test extra to declare test dependency on ``zope.testing``.
 
+- Using Python's ``doctest`` module instead of depreacted
+  ``zope.testing.doctest``.
 
 1.1
 ===
